--- a/src/app/gym-schedule/schedule/schedule.component.html
+++ b/src/app/gym-schedule/schedule/schedule.component.html
@@ -1,7 +1,7 @@
 <div class="container p-30" fxLayout="column" fxLayoutAlign="center start">
-  <div class="w-100-p" fxLayout="row wrap" fxLayoutAlign="space-between center">
+  <div class="w-100-p" fxLayout="row wrap" fxLayoutAlign="space-between center" *ngIf="!isLoading">
     <div>
-      <h1>Create Your Schedule</h1>
+      <h1>{{ hasPriorSchedule ? 'Edit Your Schedule' : 'Create Your Schedule'}}</h1>
       <mat-hint class="mb-10">Drag and drop to change exercise order</mat-hint>
     </div>
     <button style="height: 36.6px" mat-raised-button color="primary" [disabled]="scheduleEditCounter <= 0"
@@ -11,7 +11,7 @@
   </div>
 
 
-  <mat-card class="w-100-p p-24" fxLayout="column">
+  <mat-card class="w-100-p p-24" fxLayout="column" *ngIf="!isLoading">
     <div *ngFor="let day of weekDays; index as idx" class="day-border-bottom mb-40" fxFlex="100" fxLayout="row"
       fxLayout.lt-sm="column" fxLayoutAlign="start center" fxLayoutAlign.lt-sm="center start">
       <p fxFlex="20" fxFlex.lt-sm="100" class="day">{{day}}</p>
