--- a/src/app/navigations/sidenav-list/sidenav-list.component.html
+++ b/src/app/navigations/sidenav-list/sidenav-list.component.html
@@ -8,6 +8,10 @@
     <mat-icon class="sidenav-link-icon">login</mat-icon> <span class="sidenav-link-label">Login</span>
   </a>
 
+  <a *ngIf="loggedIn" mat-list-item routerLink="/schedule" routerLinkActive="active-nav" (click)="onClickSidenavLink()">
+    <mat-icon class="sidenav-link-icon">add</mat-icon> <span class="sidenav-link-label">Make Schedule</span>
+  </a>
+
   <a *ngIf="loggedIn" mat-list-item routerLink="/schedule/my-schedule" routerLinkActive="active-nav"
     (click)="onClickSidenavLink()">
     <mat-icon class="sidenav-link-icon">person</mat-icon> <span class="sidenav-link-label">My Schedule</span>
