--- a/src/app/gym-schedule/schedule/schedule.component.html
+++ b/src/app/gym-schedule/schedule/schedule.component.html
@@ -1,5 +1,5 @@
 <div class="container p-30" fxLayout="column" fxLayoutAlign="center start">
-  <div class="w-100-p" fxLayout="row wrap" fxLayoutAlign="space-between center" *ngIf="!isLoading">
+  <div class="w-100-p" fxLayout="row wrap" fxLayoutAlign="space-between center" *ngIf="!(isLoading$ | async)">
     <div>
       <h1>{{ hasPriorSchedule ? 'Edit Your Schedule' : 'Create Your Schedule'}}</h1>
       <mat-hint class="mb-10">Drag and drop to change exercise order</mat-hint>
@@ -11,7 +11,7 @@
   </div>
 
 
-  <mat-card class="w-100-p p-24" fxLayout="column" *ngIf="!isLoading">
+  <mat-card class="w-100-p p-24" fxLayout="column" *ngIf="!(isLoading$ | async)">
     <div *ngFor="let day of weekDays; index as idx" class="day-border-bottom mb-40" fxFlex="100" fxLayout="row"
       fxLayout.lt-sm="column" fxLayoutAlign="start center" fxLayoutAlign.lt-sm="center start">
       <p fxFlex="20" fxFlex.lt-sm="100" class="day">{{day}}</p>
@@ -34,6 +34,6 @@
     </div>
   </mat-card>
 
-  <ngx-loading [show]="isLoading" [config]="{ backdropBorderRadius: '3px' }"></ngx-loading>
+  <ngx-loading [show]="isLoading$ | async" [config]="{ backdropBorderRadius: '3px' }"></ngx-loading>
 
 </div>
