fetched musclegroups from firestore db

--- a/src/app/training/past-training/past-training.component.html
+++ b/src/app/training/past-training/past-training.component.html
@@ -14,7 +14,7 @@
     </ng-container>
     <ng-container matColumnDef="Primary Muscles">
       <mat-header-cell *matHeaderCellDef mat-sort-header>Primary Muscles</mat-header-cell>
-      <mat-cell *matCellDef="let row">{{row['Primary Muscles'].join(", ")}}
+      <mat-cell *matCellDef="let row">{{row.PrimaryMuscle}}
       </mat-cell>
     </ng-container>
     <ng-container matColumnDef="Sets">
